update app card

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,6 +62,7 @@
   --color-gray-500: #7C776F;
   --color-gray-600: #605B55;
   --color-gray-700: #46423D;
+  --color-gray-800: #2F2C28;
   --color-gray-900: #1C1A17;
   --color-gray-950: #12100D;
 
